--- a/memory-nest/src/components/pages/pages.css
+++ b/memory-nest/src/components/pages/pages.css
@@ -110,11 +110,12 @@ main {
 }
 
 .popup-container {
+  background-color: #fff;
   width: 250px;
   height: auto;
   display: flex;
   flex-direction: column;
-  padding: 5px;
+  padding: 10px;
   gap: 5px;
   border: 1px solid #000;
   border-radius: 10px;
